# claptrap

./: .env.example  .gitignore  CLAUDE.md  MODEL_CHANGES.md  README.md  TROUBLESHOOTING.md  pyproject.toml
.claude/: settings.local.json
claptrap/: agent.py  main.py  memory.py  prompts.py
claptrap/tools/: __init__.py  image_generation.py  web_search.py  youtube_summary.py
docs/: spec.md
tests/: test_agent.py  test_youtube_summary.py
